duniverse/menhirLib.20200211/test/static/bad/reference-to-pseudo-token.mly
%token A B
%start<unit> main
%left foobar
%%
main: A b %prec foobar {}
b: B foobar {}
