duniverse/menhirLib.20200211/test/static/bad/reference-to-pseudo-token.exp
File "reference-to-pseudo-token.mly", line 6, characters 5-11:
Error: foobar has not been declared as a token.
